# DVM-SLAM

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  README.md  cloc-lang-defs.txt  nvidia_jetson.Dockerfile  run.bash
.github/workflows/: config.yml
docs/: index.html
docs/static/css/: index.css
src/central_management_interface/: package.xml  setup.cfg  setup.py
src/central_management_interface/central_management_interface/: main.py
src/controller/: package.xml  setup.py
src/controller/controller/: my_node.py
src/evaluation/: evaluation.ipynb  mocap_calibrations.json  motion_capture_post_processing.ipynb  viz_processing.ipynb
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ChangeCoordinateFrame.msg  IsLostFromBaseMap.msg  KeyFrameBowVector.msg  KeyFrameUpdate.msg  LoopClosureTriggers.msg  MapPoint.msg  MapToAttemptMerge.msg  NewKeyFrameBows.msg  NewKeyFrames.msg  Sim3Transform.msg  Sim3TransformStamped.msg  SuccessfullyMerged.msg  Uuid.msg
src/interfaces/srv/: AddMap.srv  GetCurrentMap.srv  GetMapPoints.srv  RequestMap.srv
src/motion_controller/: package.xml  setup.cfg  setup.py
src/motion_controller/motion_controller/: collision_avoidance.py  follow_the_leader.py
src/motion_controller/motion_controller/helpers/: agent.py  driver.py  interactive_marker_wrapper.py  nmpc_collision_avoidance.py  robot_types.py
src/orb_slam3_ros/: CMakeLists.txt  package.xml
src/orb_slam3_ros/configs/: robomaster.yaml  rpi_cam.yaml
src/orb_slam3_ros/include/: agent.h  orb_slam3_wrapper.h  peer.h  publish_ros_viz_topics.h  reference_frame_manager.h
src/orb_slam3_ros/orb_slam3/: .clangd  CMakeLists.txt  build.sh
src/orb_slam3_ros/orb_slam3/Examples/Calibration/: recorder_realsense_D435i.cc  recorder_realsense_T265.cc
src/orb_slam3_ros/orb_slam3/Examples/Monocular/: EuRoC.yaml  mono_euroc.cc  mono_kitti.cc  mono_realsense_D435i.cc  mono_realsense_t265.cc  mono_tum_vi.cc
src/orb_slam3_ros/orb_slam3/Examples/Monocular-Inertial/: mono_inertial_euroc.cc  mono_inertial_realsense_D435i.cc  mono_inertial_realsense_t265.cc
src/orb_slam3_ros/orb_slam3/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc  stereo_realsense_D435i.cc  stereo_tum_vi.cc
src/orb_slam3_ros/orb_slam3/Examples/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
src/orb_slam3_ros/orb_slam3/Examples_old/Monocular/: mono_euroc.cc  mono_tum.cc
src/orb_slam3_ros/orb_slam3/Examples_old/Monocular-Inertial/: mono_inertial_tum_vi.cc
src/orb_slam3_ros/orb_slam3/Examples_old/RGB-D/: rgbd_realsense_D435i.cc  rgbd_tum.cc
src/orb_slam3_ros/orb_slam3/Examples_old/RGB-D-Inertial/: rgbd_inertial_realsense_D435i.cc
src/orb_slam3_ros/orb_slam3/Examples_old/ROS/ORB_SLAM3/src/: ros_mono.cc  ros_mono_inertial.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc
src/orb_slam3_ros/orb_slam3/Examples_old/ROS/ORB_SLAM3/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
src/orb_slam3_ros/orb_slam3/Examples_old/Stereo/: stereo_euroc.cc  stereo_realsense_t265.cc
src/orb_slam3_ros/orb_slam3/Examples_old/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_realsense_D435i.cc  stereo_inertial_realsense_t265.cc
src/orb_slam3_ros/orb_slam3/include/: Atlas.h  Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
src/orb_slam3_ros/orb_slam3/include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/orb_slam3_ros/orb_slam3/src/: Atlas.cc  Config.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/orb_slam3_ros/orb_slam3/src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/orb_slam3_ros/src/: agent.cpp  my_node.cpp  orb_slam3_wrapper.cpp  peer.cpp  publish_ros_viz_topics.cpp  ros_imu_mono.cpp  ros_mono.cpp
src/slam_system/: CMakeLists.txt  package.xml
src/slam_system/configs/: euroc.yaml  kitti.yaml  robomaster.yaml  tum.yaml
src/slam_system/include/: orb_slam3_wrapper.h  reference_frame_manager.h
src/slam_system/orb_slam3/: .gitignore  variableNamingConventionHelp.md
src/slam_system/orb_slam3/include/: Atlas.h  Config.h  Converter.h  FrameDrawer.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  MapDrawer.h  ORBVocabulary.h  SerializationUtils.h  Settings.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
src/slam_system/orb_slam3/include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/slam_system/orb_slam3/src/: Converter.cc  FrameDrawer.cc  GeometricTools.cc  ImuTypes.cc  LoopClosing.cc  MapDrawer.cc  ORBmatcher.cc  Optimizer.cc  TwoViewReconstruction.cc  Viewer.cc
src/slam_system/orb_slam3/src/CameraModels/: Pinhole.cpp
src/slam_system/src/: orb_slam3_wrapper.cpp  publish_ros_viz_topics.cpp
src/tools/: kittiToRos.ipynb
src/webots_sim/: local_simulation_server.py  package.xml  setup.cfg  setup.py
src/webots_sim/launch/: robot_launch.py
src/webots_sim/resource/: my_robot.urdf  robot1.urdf  robot2.urdf
src/webots_sim/webots_sim/: my_robot_driver.py  robot_driver.py
src/webots_sim/worlds/: city.wbt  complete_apartment.wbt  webots.yaml
